--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 /* Form Styles */
 #mc_embed_signup {
 background:#fff; 
@@ -11,3 +15,21 @@ footer {
     bottom: 0;
     width: 100%;
    }
+
+.input,.textarea{
+   max-width: 50% !important;
+   margin:auto;
+}
+
+.preOrder{
+    margin-top: 30px;
+}
+
+.aboutUs, .productImages{
+    display: flex;
+}
+
+
+.is-128x128,.is-480x800{
+margin:auto;
+}
