--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -11,3 +11,16 @@ footer {
     bottom: 0;
     width: 100%;
    }
+
+.rain {
+    background-image: url('https://media.giphy.com/media/TVpeXDi8xTlyo/giphy.gif');
+    background-size: cover;
+}
+
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+  }
