--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -3,11 +3,6 @@ html{
 }
 
 /* Form Styles */
-#mc_embed_signup {
-background:#fff; 
-clear:left; 
-font:14px Helvetica,Arial,sans-serif; 
-}
 
 
 footer {
@@ -41,10 +36,19 @@ margin:auto;
 }
 
 #myVideo {
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     min-width: 100%; 
     min-height: 100%;
+    z-index: -1;
   }
 
+  .logo{
+      position: absolute;
+      z-index: 1; 
+  }
+
+  .logoDiv{
+      margin-bottom: 50%;
+  }
