--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -30,19 +30,14 @@ footer {
 margin:auto;
 }
 
-.rain {
-    background-image: url('https://media.giphy.com/media/TVpeXDi8xTlyo/giphy.gif');
-    background-size: cover;
-}
-
-#myVideo {
+  #myVideo {
     position: absolute;
     right: 0;
-    bottom: 0;
     min-width: 100%; 
-    min-height: 100%;
+    height:auto !important;
     z-index: -1;
   }
+
 
   .logo{
       position: absolute;
@@ -52,3 +47,7 @@ margin:auto;
   .logoDiv{
       margin-bottom: 50%;
   }
+
+  .showModal{
+    display: flex;
+ }
