--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -51,3 +51,22 @@ margin:auto;
   .showModal{
     display: flex;
  }
+
+
+
+ @media screen and (max-width: 500px) {
+    .productImages{
+        display: none;
+    }
+}
+
+    
+ @media only screen and (min-width: 501px) {
+    .carousel-inner{
+        display: none;
+    }
+
+    }
+
+
+ 
