--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -39,6 +39,38 @@ html{
   .showModal{
     display: flex;
  }
+.showButton{
+    margin:auto;
+    width: 562px;
+    height: 57px;
+    border-radius: 15px;
+    font-family: Futura;
+    font-size: 28px;
+    font-weight: 500;
+    font-style: normal;
+}
+ .productIntro{
+     width: 50%;
+     margin:auto;
+     text-align: center;
+     font-family: Futura;
+ }
+
+ .introTitle{
+    font-family: Futura;
+    font-size: 42px;
+    font-weight: bold;
+ }
+
+ .introDescription{
+    font-size: 30px;
+
+ }
+
+ .sizes{
+     width: 20%;
+     margin-left:60%;
+ }
 
 
 /* nav */
@@ -52,11 +84,56 @@ html{
 /* form styles */
 .input,.textarea{
     max-width: 50% !important;
-    margin:auto;
+ }
+
+ .field{
+     margin:auto;
+     margin-top:20px !important;
+     margin-bottom: 20px !important;
  }
  
  .preOrder{
      margin-top: 30px;
+     font-family: Futura;
+     font-size: 42px;
+     font-weight: bold;
+     text-align: center;
+     justify-content: center;
+     
+ }
+
+ label{
+     margin-top: 10px;
+     width:20%;
+     margin-right:0;
+ }
+
+ .preOrderdiv{
+    margin:auto;
+    width: 33%;
+    text-align:center;
+    justify-content: center;
+ }
+
+
+.mainDiv{
+    display: inline-block;
+}
+ #preorder{
+     display:flex;
+ }
+
+ #preOrder,#email,#address{
+     margin:auto;
+ }
+
+ .nameInput{
+     margin-right:30px;
+ }
+
+ .field{
+     width:50%;
+     margin-right:auto;
  }
 
 /* footer */
@@ -65,6 +142,13 @@ footer {
     bottom: 0;
     width: 100%;
    }
+
+.buttonSize{
+    border-radius: 50%;
+    height: 50px;
+    width:50px;
+    background-color: #d8d8d8
+}
 
 
 
