--- a/InvisaWrap/css/main.css
+++ b/InvisaWrap/css/main.css
@@ -86,46 +86,13 @@ html{
     max-width: 50% !important;
  }
 
- .field{
-     margin:auto;
-     margin-top:20px !important;
-     margin-bottom: 20px !important;
- }
- 
- .preOrder{
-     margin-top: 30px;
-     font-family: Futura;
-     font-size: 42px;
-     font-weight: bold;
-     text-align: center;
-     justify-content: center;
-     
- }
 
- label{
-     margin-top: 10px;
-     width:20%;
-     margin-right:0;
- }
-
- .preOrderdiv{
-    margin:auto;
-    width: 33%;
-    text-align:center;
-    justify-content: center;
- }
 
 
 .mainDiv{
     display: inline-block;
 }
- #preorder{
-     display:flex;
- }
 
- #preOrder,#email,#address{
-     margin:auto;
- }
 
  .nameInput{
      margin-right:30px;
@@ -138,17 +105,63 @@ html{
 
 /* footer */
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
+    margin-left:10%;
    }
 
-.buttonSize{
+
+
+   .buttonSize{
     border-radius: 50%;
-    height: 50px;
-    width:50px;
+    height: 30px;
+    width:30px;
     background-color: #d8d8d8
 }
+
+.preOrder{
+    margin-top: 30px;
+    font-family: Futura;
+    font-size: 42px;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+    
+}
+#preorder{
+    display:flex;
+}
+
+.field{
+    margin:auto;
+    margin-top:20px !important;
+    margin-bottom: 20px !important;
+}
+
+
+
+label{
+    margin-top: 10px;
+    width:20%;
+    margin-right:0;
+}
+
+.preOrderdiv{
+   margin:auto;
+   /* width: 33%; */
+   text-align:center;
+   justify-content: center;
+   background-color:rgba(216, 216, 216, 0.2);
+
+}
+
+
+
+#preOrder,#email,#address{
+    margin:auto;
+}
+
 
 
 
@@ -156,11 +169,69 @@ footer {
     .productImages{
         display: none;
     }
+
+    .sizesSpan{
+        display: none;
+    }
 }
 
  @media only screen and (min-width: 501px) {
-    .carousel-inner,.carousel-indicators{
+    .carousel-inner,.carousel-indicators,.sizesDiv{
         display: none;
     }
+    .buttonSize{
+        border-radius: 50%;
+        height: 50px;
+        width:50px;
+        background-color: #d8d8d8
+    }
+
+    .preOrder{
+        margin-top: 30px;
+        font-family: Futura;
+        font-size: 42px;
+        font-weight: bold;
+        text-align: center;
+        justify-content: center;
+        
+    }
+    #preorder{
+        display:flex;
+    }
+
+    .field{
+        margin:auto;
+        margin-top:20px !important;
+        margin-bottom: 20px !important;
+    }
+    
+   
+   
+    label{
+        margin-top: 10px;
+        width:20%;
+        margin-right:0;
+    }
+   
+    .preOrderdiv{
+       margin:auto;
+       width: 33%;
+       text-align:center;
+       justify-content: center;
+       background-color:rgba(216, 216, 216, 0.2);
+    }
+   
+   
+
+    #preOrder,#email,#address{
+        margin:auto;
+    }
+
+
+ .introTitle{
+    font-family: Futura;
+    font-size: 42px;
+    font-weight: bold;
+ }
 
     }
